OJORISE-171 fix ocr